@@ -235,7 +235,8 @@ endif
     %next_iteration()
 ..end:
     ; Initialize the intro level checkpoint.
-    lda.w #!intro_sublevel : sta !ram_checkpoint
+    jsr shared_get_intro_sublevel
+    sta !ram_checkpoint
 
     ; Keep 16 bit X/Y for the original code.
     sep #$20
