@@ -206,9 +206,9 @@ dcsave:
 
     ; Load the address to the dcsave init wrapper routine.
     rep #$20
-    lda.l $05D7AC|!bank : clc : adc #$0011 : sta $0D
+    lda.l dcsave_init_address : clc : adc #$0011 : sta $0D
     sep #$20
-    lda.l $05D7AE|!bank : sta $0F
+    lda.l dcsave_init_address+2 : sta $0F
 
     ; Call the dcsave routine.
 if !sa1
@@ -223,13 +223,13 @@ endif
     lda.l dcsave_byte : cmp #$5C : bne .return
 
     ; Only save if !Midpoint = 1.
-    lda.l $00CA2B|!bank : cmp #$22 : bne .return
+    lda.l dcsave_midpoint_byte : cmp #$22 : bne .return
 
     ; Load the address to the dcsave save buffer routine.
     rep #$20
-    lda.l $00CA2C|!bank : sta $0D
+    lda.l dcsave_midpoint_address : sta $0D
     sep #$20
-    lda.l $00CA2E|!bank : sta $0F
+    lda.l dcsave_midpoint_address+2 : sta $0F
 
     ; Call the dcsave routine.
     jsl .jml
@@ -298,13 +298,28 @@ get_bitwise_mask:
 ;================================================
 get_screen_number:
     lda.l lm_version : cmp #$33 : bcc .no_lm3
-    lda.l $03BCDC|!bank : cmp #$FF : beq .no_lm3
+    lda.l lm_get_screen_routine : cmp #$FF : beq .no_lm3
 .lm3:
-    jsl $03BCDC|!bank
+    jsl lm_get_screen_routine
     rts
 .no_lm3:
     ldx $95
     lda $5B : lsr : bcc .return
     ldx $97
 .return:
+    rts
+
+;================================================
+; Routine that returns the intro sublevel in A.
+; Output: A 16 bit, intro sublevel in A.
+;================================================
+get_intro_sublevel:
+    rep #$20
+    lda.l initial_submap : and #$00FF : beq .normal
+    lda.l sprite_19_fix_byte : cmp #$EAEA : bne .normal
+.modified:
+    lda.w #!intro_level|$0100
+    rts
+.normal:
+    lda.w #!intro_level
     rts
