@@ -1,10 +1,18 @@
 ; Labels for useful ROM addresses
-death_pose = $00D0B9|!bank
-death_song = $00F60B|!bank
-timer_ticks = $008D8B|!bank
-green_star_block_count = $0091AC|!bank
-lm_version = $0FF0B4|!bank
-objectool_byte = $0DA106|!bank
-amk_byte = $008075|!bank
-dcsave_byte = $05D7AB|!bank
-sprite_load_orig = $01AC9F|!bank
+; Most of them are used to check for the presence and hijack different tools and patches.
+death_pose                    = $00D0B9|!bank
+death_song                    = $00F60B|!bank
+timer_ticks                   = $008D8B|!bank
+green_star_block_count        = $0091AC|!bank
+lm_version                    = $0FF0B4|!bank
+lm_get_screen_routine         = $03BCDC|!bank
+objectool_byte                = $0DA106|!bank
+objectool_normal_code_address = $0DA107|!bank
+amk_byte                      = $008075|!bank
+dcsave_byte                   = $05D7AB|!bank
+dcsave_init_address           = $05D7AC|!bank
+dcsave_midpoint_byte          = $00CA2B|!bank
+dcsave_midpoint_address       = $00CA2C|!bank
+sprite_load_orig              = $01AC9F|!bank
+initial_submap                = $009EF0|!bank
+sprite_19_fix_byte            = $01E762|!bank
